# vibrio-python

./: .bandit  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  pypi.test.yml  version.yml
docs/: conf.py  index.rst  requirements.in  requirements.txt  vibrio.lazer.rst  vibrio.rst  vibrio.types.rst
vibrio/: __init__.py  lazer.py  server.py  types.py
vibrio/tests/: test_lazer.py
