[project]
name = "vibrio"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "typing_extensions"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==68.2.2",
    "requests",
    "toml"
]

[tool.setuptools]
packages = ["vibrio"]

[tool.vendor]
release = "v0.1.0-alpha"
