[project]
name = "vibrio"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "typing_extensions"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=68.2",
    "GitPython",
    "toml"
]

[tool.setuptools]
packages = ["vibrio"]

[tool.vendor]
repository = "https://github.com/notjagan/vibrio.git"
reference = "invariant-globalization"
