[project]
name = "vibrio"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "typing_extensions",
    "aiohttp",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.2"]

[tool.setuptools]
packages = ["vibrio"]
include-package-data = false
